--- a/config/storage.yml
+++ b/config/storage.yml
@@ -2,9 +2,9 @@ test:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
 
-local:
-  service: Disk
-  root: <%= Rails.root.join("storage") %>
+# local:
+#   service: Disk
+#   root: <%= Rails.root.join("storage") %>
 
 amazon:
   service: S3
@@ -12,6 +12,11 @@ amazon:
   bucket: campshare40514
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   secret_access_key:  <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
+
+amazon_production:
+  service: S3
+  region: ap-northeast-1
+  bucket: campshare40514
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
