--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,8 @@ test:
 
 production:
   <<: *default
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
+  adapter: mysql2
   database: campshare_production
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
